--- a/edwin_2019/B2-ABSTRACT-E.tex
+++ b/edwin_2019/B2-ABSTRACT-E.tex
@@ -28,8 +28,10 @@ What is the form of fake apps? How are they distributed in different app markets
 None of these questions were answered so far.
 % 在未有前人研究基础的情况下，直接从业界收集数据入手分析无疑是获得第一手资料的最佳途径。
 Without any previous study, there is no doubt that collecting and analyzing data directly from the industry is the best way to win the first-hand information.
-% 因此，我们进行了针对仿冒应用的大规模数据收集和实证研究，其中实证研究分为数据挖掘，案例分析和用户反馈分析三个部分。
-Thus, we employ a large-scale data gathering and empirical study towards fake apps, in which the empirical study part is consists of three parts: data mining, case study, and user feedback analysis.
+% 因此，我们设计实现了应用过滤框架\mytool ，进行了针对仿冒应用的大规模数据收集，将仿冒应用数据整理成集。
+Thus, we design and implement an app-filter framework called \mytool, employ a large-scale data gathering towards fake apps, and file our data into a dataset.
+% 其后，我们进行了分为数据挖掘，案例分析和用户反馈分析三个部分的实证研究。
+Later, we host an empirical study part which is consists of three parts: data mining, case study, and user feedback analysis.
 
 % 在数据挖掘方面，针对前面提到的问题，我们从三个不同视角对数据进行了探究，其分别为：仿冒应用的基本特征，影响仿冒应用数量的因素，以及仿冒应用的发展轨迹。
 In terms of data mining, we leverage three different perspectives to explore our data in order to answer the aforementioned questions.
@@ -53,10 +55,10 @@ Due to the fact that previous studies revealed the existence of ranking fraud in
 As discerned and confirmed by our manual review, we make sure that some fake apps do deploy ranking fraud services to raise their exposure.
 By revealing this, we gather another piece of evidence to implement the puzzle of fake apps' nature, making our study more complete.
 
+% 综上，本文分别从框架设计实现、仿冒数据分析挖掘和评论数据审核三个方面，完成了具有创新性的研究。
+In short, we finish our innovative research by three aspects: framework design and implementation, fake app data analysis and mining, and user feedback verification.
 % 借助本文提供的数据和分析结果，我们希望读者能获得一个面向仿冒应用及其生态的清晰视角。
 Through the data and results provided by this paper, we hold an expectation that our readers obtain a clear vision of fake apps and their ecosystem.
-% 同时，我们更希望本文能抛砖引玉，吸引更多科研人员投入到对移动灰色产业的观察研究中。
-Meanwhile, we also long for raising more researchers' interests and participation, shedding more light on the mobile underground industry.
 
 % \sihao{\heiti{ 关键词:}} \xiaosi{Android应用程序, 仿冒应用, 实证研究, 数据分析, 排名欺诈}
 {\sihao{\textbf{\newline Keywords:}}} \textit{Android application, Fake App, Empirical Study, Data Analysis, Ranking Fraud}
