--- a/edwin_2019/chapter-case.tex
+++ b/edwin_2019/chapter-case.tex
@@ -1,5 +1,5 @@
 % \chapter{Case Study and Discussion}
-\chapter{案例分析与讨论}
+\chapter{仿冒数据案例分析与讨论}
 \label{chp:casestudy}
 % In this section, we present some samples in our dataset, not only to firm our findings but also to provide more valuable insights.
 在本章中，我们会呈现数据集中的一些样本，不仅仅是为了确认我们在上一章中提及的各种发现，同时也是为了提供一些更有价值的见解，让读者对我们的数据集、对仿冒应用有更加深刻的认知。
