--- a/edwin_2019/chapter-dataCollection.tex
+++ b/edwin_2019/chapter-dataCollection.tex
@@ -22,9 +22,9 @@
 
 1)\ \emph{数据收集} \quad
 数据收集主要分为两个部分：正版应用信息的收集和仿冒应用的收集。
-在正版应用信息收集的部分，我们选择了50个最热门的App作为目标App，然后手动收集了跟这些App有关的信息；
-仿冒应用信息收集方面，我们得到了上海犇众信息技术有限公司的帮助，顺利收集到了大量的应用样本。
-借助自动化分析框架\mytool，我们获得了大量仿冒应用的数据。
+在正版应用信息收集的部分，本文选择了50个最热门的App作为目标App，然后手动收集了跟这些App有关的信息；
+仿冒应用信息收集方面，作者得到了上海犇众信息技术有限公司的帮助，得以接触从各个应用商店获得的大量的应用样本。
+借助自动化分析框架\mytool，作者获得了大量仿冒应用的数据。
 
 2)\ \emph{大规模数据挖掘} \quad
 在这一步，我们对搜集到的仿冒样本数据进行分析，从三个视角完成了一次大规模数据挖掘。
