--- a/edwin_2019/chapter-future.tex
+++ b/edwin_2019/chapter-future.tex
@@ -3,41 +3,47 @@
 
 \section{总结}
 % In this paper we first introduce the concept of fake apps, and study specifically towards these apps.
-在本文中，我们率先引入了``仿冒应用''这个概念，然后对这一方面进行了专门的研究，还搜集了大量的相关样本以辅助调查。
+在本文中，作者率先引入了``仿冒应用''这个概念，然后对这一方面进行了专门的研究，还搜集了大量的相关样本以辅助调查。
 % To the best of our knowledge, we are the first to conduct a comprehensive empirical study on a large-scale fake apps.
-据我们所知，我们的课题是第一个针对仿冒应用进行大规模全面实证研究的研究。
+据作者所知，本文的课题是第一个针对仿冒应用进行大规模全面实证研究的研究。
 
 % To better understand the ecosystem nature of this type of apps, we obtained more than 150,000 data entries from real-world markets, observed and measured the fake samples among this dataset from several dimensions including certificate information, app size, app name and package name, time factor and so on.
-为了更好地了解这个类型的应用的生态环境，我们从现实世界中的各个应用市场中获取了超过15万个应用样本，并且从多个不同维度，对这个数据库里面的仿冒样本进行了观测和考察。
+为了更好地了解这个类型的应用的生态环境，作者从现实世界中的各个应用市场中获取了超过15万个应用样本，并且从多个不同维度，对这个数据库里面的仿冒样本进行了观测和考察。
 这些维度包括了APK包中的安全证书信息、应用大小、应用名、包名和时间因素等等。
 
 % Through our measurements we gain valuable experience on fake apps from several perspectives, findings like fake samples' naming tendency and fake developers' evasive strategies are inferred.
-然后，我们将收集到的数据分为了\emph{仿冒应用的基本特征}、\emph{影响仿冒应用数量的因素}和\emph{仿冒应用的发展轨迹}三个不同视角进行了测量，获得了不少宝贵的经验，并推断出了一些发现，比如仿冒应用的命名倾向和仿冒应用开发者对市场监管防御机制的规避策略。
+然后，本研究将收集到的数据分为了\emph{仿冒应用的基本特征}、\emph{影响仿冒应用数量的因素}和\emph{仿冒应用的发展轨迹}三个不同视角进行了测量，获得了不少宝贵的经验，并推断出了一些发现，比如仿冒应用的命名倾向和仿冒应用开发者对市场监管防御机制的规避策略。
 % To support our findings, we further present a few study cases which provide us a more detailed look into fake apps to back our discoveries on fake app ecosystem.
-为了佐证我们的发现，我们进一步给出了从数据集中挑选的几个研究案例。
-这几个案例进一步拉近了我们与仿冒距离，也为我们对仿冒应用生态系统的发现提供了实例支持。
+为了佐证本文的发现，作者进一步给出了从数据集中挑选的几个研究案例。
+这几个案例进一步拉近了研究者与仿冒应用的距离，也为本文对仿冒应用生态系统的发现提供了实例支持。
 
-之后，我们还收集了部分仿冒样本在商场上对应的评论和评级，试图进而了解普通用户对这些仿冒应用持有的态度。
-但在研究过程中，我们发现仿冒应用受到的评价异常地高，于是我们使用了学界在近年来对排名欺诈的一些研究方法对仿冒应用的评论进行了检测。
-结果显示，刷好评的排名欺诈行为的确存在于应用市场中，而且在我们搜集到的仿冒应用评论中就有刷好评的痕迹。
+之后，作者还收集了部分仿冒样本在商场上对应的评论和评级，试图进而了解普通用户对这些仿冒应用持有的态度。
+但在研究过程中，作者发现仿冒应用受到的评价异常地高，于是在本研究中使用了学界在近年来对排名欺诈的一些研究方法对仿冒应用的评论进行了检测。
+结果显示，刷好评的排名欺诈行为的确存在于应用市场中，而且在本研究搜集到的仿冒应用评论中就有刷好评的痕迹。
 
 % We hope the lessons learned in this article are informative and helpful for mobile security practitioners in both academia and industry to improve the status quo.
-我们希望在这篇研究中能汲取到的经验和教训能够为移动安全产业的从业者（不论是在工业界还是学术界）提供足够的信息，以便于改善移动安全界的现状。
+作者希望在这篇研究中能汲取到的经验和教训能够为移动安全产业的从业者（不论是在工业界还是学术界）提供足够的信息，以便于改善移动安全界的现状。
 
 \section{展望}
 
 在大规模分析的部分中，本文中用到了三个不同的角度分别探索仿冒应用的特征，但回顾探索过程，一些方法和步骤依然不够深入。
-如果能从以下两个角度再向仿冒应用入手研究，或许能有更多有所裨益的发现：
+如果能从以下三个角度再向仿冒应用入手研究，或许能有更多有所裨益的发现：
 
-1）应用图标。
-我们在进行案例研究的时候发现，不少仿冒应用的图标和原版官方应用的图标其实十分相像。
-因此，图标也可以是一个用于发掘/鉴别仿冒应用的突破口，我们也许可以从应用图标中挖掘到更多可用的信息与行为模式。
+1) 应用图标。
+作者在进行案例研究的时候发现，不少仿冒应用的图标和原版官方应用的图标其实十分相像。
+因此，图标也可以是一个用于发掘/鉴别仿冒应用的突破口，研究者也许可以从应用图标中挖掘到更多可用的信息与行为模式。
 碍于时间因素所限，本文研究中并未加入图像对比处理部分提取各APK包中的图标与官方应用的图标进行比对，但如果能研究出快速比对多个应用间图标、图像相似度的算法，定当对应用市场的安全监管筛选机制有所好处。
 
-2）应用内代码/文本/链接/ip分析。
+2) 应用内代码/文本/链接/ip分析。
 代码分析可以有效地剖析应用的行为，而相似的文本资源、链接等信息也可以提供各个App之间可能存在的关联关系。
 遗憾的是，从当前技术水平出发，仔细地对一个App进行完整而全面的静态分析所需时长太长，而动态分析需要测试样例驱动，自动化的动态测试工具往往未能深入拓展一个应用的大部分核心功能。
 因此，开发出快速的分析算法对App进行更深入的探索，就能挖掘出有关仿冒应用生态的更多信息。
+
+3) 仿冒应用总量的变化原因
+\fullref{chp:discoveries}中提及到了Janus收集到的仿冒应用数量并非一直保持上升趋势。
+近年来，能搜集到的仿冒应用数量有突然下跌、甚至渐渐式微的迹象。
+究竟是什么因素导致了这个原因？是移动黑灰产内部的变化，还是安全厂商日益紧密的封锁？
+这将会是一个十分有趣的课题。
 
 而在评论分析的部分中，也有可以继续发掘的部分。
 在现阶段，学界关于排名欺诈的研究一直在针对积极评价方面，但是对应用差评进行排名欺诈的相关研究却有待补充。
@@ -50,4 +56,4 @@
 比如是否能利用自动化爬虫框架提高爬虫模块的鲁棒性（对抗应用商店的反爬虫技术、下载稳定性），工具本身的代码优化，还有工具整体的易用性、稳定性等。
 
 总之，从整体上看，本文的工作还有很多可以深化的部分。
-我们希望本文能抛砖引玉，在让读者对移动应用黑色产业有更多认识的同时，激发读者对仿冒应用等方面的研究兴趣，并从上述几点出发，为后人带来更多深入而完善的相关研究。
+作者希望本文能抛砖引玉，在让读者对移动应用黑色产业有更多认识的同时，激发读者对仿冒应用等方面的研究兴趣，并从上述几点出发，为后人带来更多深入而完善的相关研究。
