--- a/edwin_2019/chapter-intro.tex
+++ b/edwin_2019/chapter-intro.tex
@@ -25,7 +25,7 @@
 伴随着应用数量爆发式增长的，还有欣欣向荣的移动黑灰产。
 \emph{仿冒应用}构建了移动黑灰产工业链中十分重要的一环。
 本文提及的仿冒应用指代模仿市面上热门的应用、甚至外观与热门应用相差无几的移动应用，其目的是诱导用户下载以赚取流量，甚至是窃取用户信息、触发有害行为从而盈利。
-根据的前期观察，我们发现仿冒应用以两种不同的形式出现。
+根据的前期观察，作者发现仿冒应用以两种不同的形式出现。
 第一类为\texttt{模仿应用}，这类应用具有和原版热门应用相似的外观（比如名字、图标等），诱导用户下载。
 而第二类，\texttt{高仿应用}~\cite{Andow2016ASO, luo2016repackage}，已不单单是与原应用``相似''了，这类应用采用和原应用一模一样的外观，乃至连版本号都相同，其中的部分应用就是直接通过对原应用重打包做成的。
 
@@ -33,7 +33,7 @@
 % For example, when users try to search an app for installation in market, multiple fake apps with similar names or icons will be retrieved at the same time.
 % As a result, the user experience of app searching and downloading is greatly affected by the fake apps in real world.
 这些仿冒应用不仅大大损害了原应用开发者的利益，也侵犯了用户的权益。
-我们可以假设一个十分普遍的场景：当用户尝试通过应用市场搜索安装一个应用，应用市场往往会返回多个无论是名字或是图标都十分相像的结果，在这种情况下，用户十分有可能安装一个仿冒应用。
+可以假设一个十分普遍的场景：当用户尝试通过应用市场搜索安装一个应用，应用市场往往会返回多个无论是名字或是图标都十分相像的结果，在这种情况下，用户十分有可能安装一个仿冒应用。
 就算用户最后通过某些途径安装上了原版应用，也浪费了时间和人力成本，遑论某些仿冒应用中潜藏着恶意行为，一旦被触发就会对用户造成更大的损害。
 于是，用户搜索与下载应用时的安全和体验就被仿冒应用严重影响了。
 
@@ -46,8 +46,8 @@
 % Similarly, we witness the same deficiency in industry.
 % Most attention in analysis and threat reports focuses on malicious apps while neglecting the fake apps~\cite{McAfee_mobile_thread_report}.
 % On the other hand, the knowledge gained from desktop era regarding malicious or fake software are of less use, due to differences in operating system properties~\cite{yin2007panorama}.
-尽管如今仿冒应用随处可见，我们对仿冒应用和他们的生态却依然知之甚少——他们有何共同特征、数量多少、迭代速度如何、以及他们如何规避应用市场检测等问题依然有待解答。
-遗憾的是，如今关于移动应用的学术研究大多关注于恶意应用的检测技术~\cite{chen2016stormdroid,chen2018automated, chen2016towards, fan2016poster}。据我们所知，目前还未有任何关于仿冒应用或其生态系统的研究。
+尽管如今仿冒应用随处可见，业界和学术界对仿冒应用和他们的生态却依然知之甚少——他们有何共同特征、数量多少、迭代速度如何、以及他们如何规避应用市场检测等问题依然有待解答。
+遗憾的是，如今关于移动应用的学术研究大多关注于恶意应用的检测技术~\cite{chen2016stormdroid,chen2018automated, chen2016towards, fan2016poster}。据作者所知，目前还未有任何关于仿冒应用或其生态系统的研究。
 类似地，工业界中也鲜见关于仿冒应用的课题。多数分析与威胁报告都聚焦于恶意应用上，忽略了仿冒应用~\cite{McAfee_mobile_thread_report}。
 而在另一方面，由于底层、实现等各个层面上的差异，从桌面平台上获取的关于仿冒软件的知识也不能很好地用于了解移动端仿冒应用~\cite{yin2007panorama}。
 
@@ -119,15 +119,46 @@ Rahman等人在2019年发布了一个关于虚假评论行为的实证研究~\ci
 \section{论文研究意义}
 
 前文的学术界研究现状，不仅反映出移动黑灰产业是目前的研究热点之一，更反映出移动黑灰产从业者无孔不入的特点。
-为了保障正当开发者的利益与消费者的权益，我们需要对移动黑灰产有更全面、更深入的理解，从而更好地预防未知的威胁。
+为了保障正当开发者的利益与消费者的权益，学术界和业界都需要对移动黑灰产有更全面、更深入的理解，从而更好地预防未知的威胁。
 然而，现有研究提供的知识仍有空缺部分，仿冒应用部分正是缺口之一。
-仿冒应用有什么样的形态？什么样的应用更有可能被仿冒？仿冒应用的发展有什么样的趋势？这一环节会与其他黑灰产业环节有关联吗？
+仿冒应用有什么样的形态？仿冒应用的发展有什么样的趋势？仿冒应用的市场反馈如何？这一环节会与其他黑灰产业环节有关联吗？
 
-为了回答这些疑问，我们借助犇众信息的移动安全威胁数据平台Janus\footnote{\url{https://www.appscan.io/}}搜集并分析了大量应用样本，完成了一次大规模实证研究，对仿冒应用作出了较为全面的剖析，填补了本领域的研究空白。
-通过收集仿冒应用在市场上获得的反馈，我们还进一步验证了仿冒应用和排名欺诈行为的关系，进一步地提供了关于仿冒应用生态的知识。
+为了回答这些疑问，作者借助犇众信息的移动安全威胁数据平台Janus\footnote{\url{https://www.appscan.io/}}搜集并分析了大量应用样本，完成了一次大规模实证研究，对仿冒应用作出了较为全面的剖析，填补了本领域的研究空白。
+通过收集仿冒应用在市场上获得的反馈，本研究还验证了仿冒应用和排名欺诈行为的关系，进一步地提供了关于仿冒应用生态的知识。
 
 
-\section{论文研究内容}
+\section{研究中的困难与挑战}
+在实证研究中，工作者通常都会遇到几点挑战：如何确定研究主体、如何收集数据、如何对数据进行有效处理；
+而在评论分析分析验证，如何从评论数据进行挖掘则是研究者经常要思考的问题。
+因此，本工作共遇到四点挑战，可被整理如下：
+
+1)	如何确定仿冒应用？
+
+仿冒应用和正版应用是相对的概念。
+作者选择了市面上最热门的50个应用，再搜集其对应的仿冒应用样本。
+从应用中筛选出与热门应用外观相似或是相同的样本后，本文使用Android本身自带的证书机制，将获得样本的证书信息与原版应用的证书信息进行比对，从而鉴别出仿冒的样本。
+
+2)	如何获得针对仿冒应用的大量数据？
+
+数据搜集是科研工作中公认的难点。
+本文想要提供一次全面的研究结果，除了搜集的目标应用需要由多样性之外，也必须获得不同应用市场上的数据，增加研究的代表性。
+前文提及犇众信息的移动安全威胁数据平台Janus是一个数据整合平台。该平台每天从各大Android应用市场爬取应用样本入库，免去了要针对各个市场重新定制爬虫代码的麻烦。
+通过设计和实现仿冒应用筛选框架\mytool，作者顺利从Janus搜寻到了超过15万条数据条目作为原始数据，其中每条数据条目代表Janus从应用市场上获得的一个应用样本。
+
+3)	如何对大量的数据进行有效处理？
+
+数据规模和处理效率一直是一对矛盾。
+由于一条数据条目代表一个应用样本，要对超过15万个应用样本进行详尽分析，明显太耗费时间成本与计算成本；然而，如果只对样本进行简单处理，获得的分析结果就不够全面和深入。
+在尽量确保分析全面性的前提下，对于每个样本，本研究只抽取关键信息进行分析，而不对整个应用的代码进行详尽的静态分析或者动态分析，以节省时间与计算成本。
+
+4)  如何对评论数据分析挖掘
+
+如何从评论数据中挖掘出排名欺诈是否存在，是相关工作的一个重点。
+本文将采用两种不同的方法验证仿冒应用评论是否与排名欺诈相关，两种方法分别从评论内容和用户可信度两个角度对评论进行挖掘。
+如果两种方法结果一致，则可以说明仿冒应用的评论中体现（或不体现）排名欺诈行为；否则，研究者也能在人工复核之后对比出两种方法的性能优劣。
+
+
+\section{论文研究内容与创新点}
 本文的主要研究工作如下：
 \begin{itemize}
 	%				\setlength{\itemsep}{-5pt}
@@ -136,49 +167,30 @@ Rahman等人在2019年发布了一个关于虚假评论行为的实证研究~\ci
 	\setlength{\parsep}{0pt}
 
 	\item{\bf 首次针对Android仿冒应用的大规模数据搜集}
-	针对市面上最后欢迎的50款应用，我们从各个应用市场中收集了超过13万个应用样本数据，再从中筛选出了约5万个仿冒样本，完成了首次针对Android仿冒应用的大规模数据搜集。
+	针对市面上最后欢迎的50款应用，作者从各个应用市场中收集了超过13万个应用样本数据，再从中筛选出了约5万个仿冒样本，完成了首次针对Android仿冒应用的大规模数据搜集。
 
 	\item{\bf 对工业界中仿冒应用的实证研究}
-	在大量工业界数据的支持下，我们进行了第一次针对Android仿冒应用的实证研究，补充了对移动黑灰产的研究空白。
+	在大量工业界数据的支持下，本研究进行了第一次针对Android仿冒应用的实证研究，补充了对移动黑灰产的研究空白。
 	其具体从以下三个方面入手：
 	\begin{itemize}
 		\item 仿冒应用的基本特征
 		\item 影响仿冒应用数量的因素
 		\item 仿冒应用的发展轨迹
 	\end{itemize}
+	之后，作者还从样本信息中对数据手动筛查，获得了几个真实案例。
+	通过对案例的分析，本研究进一步印证了前序测量中发现的结果与结论。
 
-	\item {\bf 基于真实案例发掘仿冒应用特征}
-	之后，我们从样本信息中对数据进行挖掘，获得了几个真实案例。
-	通过对案例的分析，我们进一步印证了前序测量中发现的结果与结论。
-
-	\item {\bf 对仿冒应用评论的挖掘与分析}
-	最后，我们进一步从应用评论出发，在试图从市场反应了解用户对仿冒应用的态度以外，也尝试挖掘仿冒应用与排名欺诈（另一种移动黑灰产）之间是否有关联，以深化读者对仿冒应用生态的了解。
+	\item {\bf 对仿冒应用评论的分析与验证}
+	最后，作者进一步从应用评论出发，在试图从市场反应了解用户对仿冒应用的态度以外，也尝试挖掘仿冒应用与排名欺诈（另一种移动黑灰产）之间是否有关联，以深化读者对仿冒应用生态的了解。
 
 \end{itemize}
 
-
-\section{研究中的困难与挑战}
-在实证研究中，工作者通常都会遇到几点挑战：如何确定研究主体、如何收集数据、如何对数据进行有效处理。
-在本研究中，对应的三点挑战可被整理如下：
-
-1)	如何确定仿冒应用？
-
-仿冒应用和正版应用是相对的概念。
-我们选择了市面上最热门的50个应用，再搜集其对应的仿冒应用样本。
-从应用中筛选出与热门应用外观相似或是相同的样本后，我们使用Android本身自带的证书机制，将获得样本的证书信息与原版应用的证书信息进行比对，从而鉴别出仿冒的样本。
-
-2)	如何获得针对仿冒应用的大量数据？
-
-数据搜集是科研工作中公认的难点。
-本文想要提供一次全面的研究结果，除了搜集的目标应用需要由多样性之外，也必须获得不同应用市场上的数据，增加研究的代表性。
-前文提及犇众信息的移动安全威胁数据平台Janus是一个数据整合平台。该平台每天从各大Android应用市场爬取应用样本入库，免去了我们要针对各个市场重新定制爬虫代码的麻烦。
-结合网络爬虫技术，我们顺利从Janus搜寻到了超过15万条数据条目作为原始数据，其中每条数据条目代表Janus从应用市场上获得的一个应用样本。
-
-3)	如何对大量的数据进行有效处理？
-
-数据规模和处理效率一直是一对矛盾。
-由于一条数据条目代表一个应用样本，要对超过15万个应用样本进行详尽分析，明显太耗费时间成本与计算成本；然而，如果只对样本进行简单处理，获得的分析结果就不够全面和深入。
-在尽量确保分析全面性的前提下，对于每个样本，我们只抽取关键信息进行分析，而不对整个应用的代码进行详尽的静态分析或者动态分析，以节省时间与计算成本。
+创新点如下：
+\begin{itemize}
+	\item 设计并实现了应用过滤框架\mytool ，有效地收集到了大量关于仿冒应用的数据；
+	\item 对收集到的仿冒应用数据进行挖掘和案例分析，提供了关于仿冒应用填补了移动黑灰产研究中关于仿冒应用的研究空白；
+	\item 对仿冒应用的评论数据审查和验证，确认了仿冒应用和排名欺诈这两项移动黑灰产之间的关联。
+\end{itemize}
 
 
 \section{本文组织结构}
@@ -192,10 +204,13 @@ Rahman等人在2019年发布了一个关于虚假评论行为的实证研究~\ci
 
 \fullref{chp:fakerevealer} 阐述了\mytool 的运行流程，并详细介绍了其中三个组件（\componentA、\componentB 和\componentC）的设计与实现。
 
-\fullref{chp:discoveries} 从多个视角分类提出并解说针对这批仿冒应用数据得到的发现。三个视角包括仿冒应用特征、影响仿冒应用数量的因素和仿冒应用的发展轨迹，每个视角都被进一步分解成了多个不同的研究问题。
+\fullref{chp:discoveries} 从多个视角分类提出并解说针对这批仿冒应用数据得到的发现。
+三个视角包括仿冒应用特征、影响仿冒应用数量的因素和仿冒应用的发展轨迹，每个视角都被进一步分解成了多个不同的研究问题。
+最后，本章还会挑出数据中具有代表性的一些案例进行案例分析，以案例进一步佐证分析结果的正确性。
 
-\fullref{chp:casestudy} 结合上一章中提出的各个发现，挑出数据中具有代表性的一些案例进行案例分析，以案例进一步佐证分析结果的正确性。
+% \fullref{chp:casestudy} 结合上一章中提出的各个发现，挑出数据中具有代表性的一些案例进行案例分析，以案例进一步佐证分析结果的正确性。
 
-\fullref{chp:feedback} 在前文基础上，从应用市场上搜集了部分仿冒应用的评论进行分析，并使用了近年来学界对排名欺诈行为的研究方法对仿冒应用的评论进行了排查，以检测仿冒应用和排名欺诈行为之间是否存在关联。
+\fullref{chp:feedback} 在前文解读了仿冒应用特征的基础上，从应用市场上搜集了部分仿冒应用的评论进行分析，研究仿冒应用收获的市场反馈。
+为了解答仿冒应用与排名欺诈之间是否存在关联的问题，本章使用了近年来学界对排名欺诈行为的研究方法对仿冒应用的评论进行了排查，在结合人工复核后得出了移动黑灰产环节之间互有关联的结果。
 
 \fullref{chp:future} 对本文工作进行总结，并对下一步工作进行展望。
