--- a/edwin_2019/chapter-feedback.tex
+++ b/edwin_2019/chapter-feedback.tex
@@ -3,26 +3,26 @@
 
 应用市场中的用户反馈区是Android应用生态的重要部分，也是移动黑灰产从业者的深耕之地。
 热心用户会在评论区提出反馈，黑灰产从业者则会利用排名欺诈的手段牟取利益。
-为了进一步对仿冒应用的生态有所了解，作者有必要搜集和分析仿冒应用的评论。
+为了进一步对仿冒应用的生态有所了解，笔者有必要搜集和分析仿冒应用的评论。
 对于与仿冒应用相关的评论，有以下待解答的问题：
 有多少用户会对这些应用进行评论？
 用户对这些应用的使用感受如何？
 仿冒应用是否会跟排名欺诈有所联系？
 
-为了回答这些问题，作者从\texttt{360手机助手}应用商店中爬取了部分应用和它们的所有历史评论，然后对这些评论进行了处理和分析。
+为了回答这些问题，笔者从\texttt{360手机助手}应用商店中爬取了部分应用和它们的所有历史评论，然后对这些评论进行了处理和分析。
 
 \section{仿冒评论数据收集}
-由于Janus平台上并不提供评论数据，所以作者重新在应用市场上收集评论数据。
-在\texttt{360手机助手}应用商店中，作者随机挑选了856个应用，爬取了这些应用的APK包和它们的所有历史评论。
-之后，作者将上一次数据收集时保存的正版应用的信息重新导入\mytool，并从这一批应用中筛选出了对应仿冒应用。
+由于Janus平台上并不提供评论数据，\mytool 的爬虫模块也只支持应用爬取，所以笔者另外在应用市场上重新收集了评论数据。
+在\texttt{360手机助手}应用商店中，笔者随机挑选了856个应用，爬取了这些应用的APK包和对应的所有历史评论。
+之后，笔者将上一次数据收集时保存的正版应用的信息重新导入\mytool，从新收集的应用中筛选出了对应仿冒应用。
 
 每条评论都会附带一个评价分数，某款App在市场上的平均评价就是所有评论评分的均值。
-对于每条评论信息，作者能收集到的数据项是：\texttt{应用包名}、\texttt{用户ID}、\texttt{评论内容}、\texttt{评分}和\texttt{评论日期}共五项。
+对于每条评论信息，笔者能收集到的数据项是：\texttt{应用包名}、\texttt{用户ID}、\texttt{评论内容}、\texttt{评分}和\texttt{评论日期}共五项。
 
 \subsection{评论数据概览}
-在作者收集评论的所有856个应用中，有6款应用与先前仿冒应用数据中的包名对应。
+在笔者收集评论的所有856个应用中，有6款应用与先前仿冒应用数据中的包名对应。
 要注意的是，由于本研究的仿冒应用列表为针对50个热度最高的目标App整理而成，而收集评论的应用是在整个市场范围内随机挑选的，所以这里的仿冒应用占总体应用比例较小。但这不意味着整个市场中就只有这几款应用是仿冒应用。
-另外，由于这856个应用是随机挑选的，作者认为这批数据具有一定的代表性，可以应以反映整个市场的评论分布情况。
+另外，由于这856个应用是随机挑选的，笔者认为这批数据具有一定的代表性，可以应以反映整个市场的评论分布情况。
 本次研究一共爬取到了267,397名用户的365,461条评论，其中6款仿冒应用的所有历史评论共计3,591条，来自2,946名用户。
 
 \subsection{基础分析}
@@ -73,12 +73,13 @@
 以下是一些热门应用的评分和这些仿冒应用的评分的对比：
 在同一市场下，移动购物类应用\texttt{淘宝}的评分为4.55分，近年十分受欢迎的短视频应用\texttt{抖音}平均评价是4.5分，游戏类应用\texttt{开心消消乐}的评分是3.65分，而\texttt{微信}的平均评价更是只有3.45分。
 上述应用毫无疑问都是十分优质的App，庞大的用户基数带来的大量真实评价会使得平均评价较为稳定，不会因为在短时间内收到少量好评或者差评就产生较大的评价波动。
-在\texttt{淘宝}等应用作为基准的情况下，6款仿冒应用的评分之高不禁令作者想到恶意刷评的相关研究。
-但本研究不能仅凭几个应用的平均评价对比就咬定仿冒应用存在刷好评的行为，所以本文会应该先分析数据集的整体分布再作进一步比较。
+在\texttt{淘宝}等应用作为基准的情况下，6款仿冒应用的评分之高不禁令笔者想到恶意刷评的相关研究。
+然而，笔者不能仅凭几个应用的平均评价对比就咬定仿冒应用存在刷好评的行为。
+因此，本文先分析数据集的整体分布，再作进一步比较。
 
 在不考虑上述提到的恶意刷评的情况下，一款应用的使用人数越多，就越有可能收到来自用户的评价。
 所以可以在一定程度上，从一款应用的评论数目估计其用户数量的多少。
-\autoref{fig:cmt_dist_total}中的两个小提琴图显示了所有856个应用收到评论的数量和总体评级分布，这有助于让读者了解市场中应用的热度分布情况和用户的评价倾向。
+\autoref{fig:cmt_dist_total}中的两个小提琴图显示了所有856个应用收到评论的数量和总体评级分布，有助于了解市场中应用的热度分布情况和用户的评价倾向。
 
 % Python 作图代码
 % font_size = 20
@@ -128,7 +129,7 @@
 
 \subsection{排名欺诈检测初探}
 
-带着上述的疑问，作者决定用自动化的方法试图寻找这几款应用是否有排名欺诈的可能。
+带着上述的疑问，笔者决定用自动化的方法试图寻找这几款应用是否有排名欺诈的可能。
 
 \texttt{FRAUDAR}~\cite{hooi2016fraudar}是Bryan Hooi在2016年推出的一个算法，可以使用二分图挖掘的方法找出可能的虚假好评，并输出最可能涉及排名欺诈的应用和用户。
 算法基于的假设是，普通用户的行为（在本文中即为对App评论的行为）是大致随机的，而用于进行排名欺诈的用户群的行为却会有比较明显的指向性（即针对购买了排名欺诈服务的App发送好评），而且为了将平均评分拉高，就意味着需要发送大量好评。
@@ -137,9 +138,9 @@
 
 由于此处的排名欺诈指用大量虚假好评刷高应用的平均评价，所以在寻找排名欺诈用户和对应应用时，应该只采用满分好评作为数据。
 因此，本研究从所有评论中筛选出了满分好评，其总数为381,507条，由229,100名用户给出，分布于848个应用中，占评论总数的87.15\%。
-作者将\texttt{FRAUDAR}应用在了本研究的好评数据集上，找到了115名可疑用户和13个可疑应用。
-经过比对后，作者发现，13个可疑应用并不包含仿冒样本，而仿冒应用的所有评论条目中也没有源于那115名可疑用户的评论。
-但\emph{com.jhwl.fjxa}的评价表现依然令人生疑，因此，作者决定使用其他办法检测这几款仿冒应用的评论中是否存在排名欺诈的可能性。
+笔者将\texttt{FRAUDAR}应用在了本研究的好评数据集上，找到了115名可疑用户和13个可疑应用。
+经过比对后，笔者发现，13个可疑应用并不包含仿冒样本，而仿冒应用的所有评论条目中也没有源于那115名可疑用户的评论。
+但\emph{com.jhwl.fjxa}的评价表现依然令人生疑，因此，笔者决定使用其他办法检测这几款仿冒应用的评论中是否存在排名欺诈的可能性。
 基于本工作中现有的数据项，进行检测的角度可以分为两个，一个是评论用户可信度，另一个则是评论内容相似度。
 
 \subsection{基于评论用户可信度的排名欺诈排查}
@@ -158,7 +159,7 @@ Jaccard(set_i, set_j) = \frac{|set_i \cap set_j|}{|set_i \cup set_j|}
 \end{equation}
 \vspace{0.5mm}
 
-在这种计算方式下，那些仅给过一次好评的用户将会很容易成为噪声数据，对研究的结果产生影响，所以作者先剔除掉了这部分数据。
+在这种计算方式下，那些仅给过一次好评的用户将会很容易成为噪声数据，对研究的结果产生影响，所以笔者先剔除掉了这部分数据。
 仅给过一次好评的用户共186,775人，占所有给出好评用户的81.53\%。
 
 在将行为相似的用户聚类之后，可以通过计算某一应用评论中疑似排名欺诈评论的占比、或是评论该App的可疑用户占所有可疑用户的占比来排查可能购买了排名欺诈服务的App。
@@ -186,13 +187,13 @@ Jaccard(set_i, set_j) = \frac{|set_i \cap set_j|}{|set_i \cup set_j|}
 
 在计算完权重之后，可以分别按其中的两个子权重对应用进行排名，筛选出可能购买了排名欺诈服务的App。
 
-作者分别将$T_1$设置为0.4，0.6和0.8，尝试对可疑用户进行聚类，结果分别将42,325名给出好评次数大于1的用户分到了10,024，14,520，15,493个聚类中。
+笔者分别将$T_1$设置为0.4，0.6和0.8，尝试对可疑用户进行聚类，结果分别将42,325名给出好评次数大于1的用户分到了10,024，14,520，15,493个聚类中。
 可对这些聚类进行简单分析如下：
 绝大多数聚类中都只有一名用户，即使是在相似度阈值只有0.4的情况下，也只有约7\%的聚类中包含3个或以上的用户（阈值为0.6和0.8时，该比例均为6\%）。
-但是，当挑出包含用户数目大于10的聚类（$T_1$为0.4/0.6/0.8时，这些聚类的占比分别为0.97\%/0.70\%/0.57\%）时，作者却发现这些聚类分别包含了29,168/23,742/22,218个用户，他们所发布的好评共计分别有98,226/80,492/73,422条。
-因此作者推定，有一部分用户的行为模式相当近似且可疑，本文将会把这部分用户组成的群体看作是疑似的排名欺诈用户群体（$G_r$）。
+但是，当挑出包含用户数目大于10的聚类（$T_1$为0.4/0.6/0.8时，这些聚类的占比分别为0.97\%/0.70\%/0.57\%）时，笔者却发现这些聚类分别包含了29,168/23,742/22,218个用户，他们所发布的好评共计分别有98,226/80,492/73,422条。
+因此笔者推定，有一部分用户的行为模式相当近似且可疑，本文将会把这部分用户组成的群体看作是疑似的排名欺诈用户群体（$G_r$）。
 
-接下来，作者分别计算了不同$T_1$下，三款仿冒应用在\autoref{equ:usr_cre4}和\autoref{equ:usr_cre5}中的两个权重，即三款应用中的好评用户占可疑用户的比例、以及其好评占所有可疑用户发布的好评的比例。
+接下来，笔者分别计算了不同$T_1$下，三款仿冒应用在\autoref{equ:usr_cre4}和\autoref{equ:usr_cre5}中的两个权重，即三款应用中的好评用户占可疑用户的比例、以及其好评占所有可疑用户发布的好评的比例。
 对于本章研究的三个仿冒应用，其两个子权重的结果分别展示在\autoref{table:usr-cred-res-1}和\autoref{table:usr-cred-res-2}中。
 
 \begin{table}[htbp]
@@ -239,13 +240,13 @@ Jaccard(set_i, set_j) = \frac{|set_i \cap set_j|}{|set_i \cup set_j|}
 
 \subsection{基于评论内容相似度的排名欺诈排查}
 与前面的用户可信度计算相比，利用评论内容相似度排查排名欺诈的方法要相对简单一些，计算量也明显较小。
-根据作者的经验，在排名欺诈相关的评论通常具有很高的相似性，甚至一模一样，导致那些购买排名欺诈服务的应用中有很多相似甚至相同的评论。
+根据笔者的经验，在排名欺诈相关的评论通常具有很高的相似性，甚至一模一样，导致那些购买排名欺诈服务的应用中有很多相似甚至相同的评论。
 所以，可以通过计算应用内相似评论的比率以筛选可能购买了排名欺诈服务的应用。
 
 \begin{Def}
 	应用评论重合率
 
-	对于市场中的某一个评论列表为$CL_{app_k}$的应用$app_k$，假设其所有评论可以被分成$n$个组$CG_i (0 <i < n)$，则作者定义该应用的评论重合率$RD_{app_k}$如下。重合率越高，应用越有可能存在排名欺诈行为。
+	对于市场中的某一个评论列表为$CL_{app_k}$的应用$app_k$，假设其所有评论可以被分成$n$个组$CG_i (0 <i < n)$，则笔者定义该应用的评论重合率$RD_{app_k}$如下。重合率越高，应用越有可能存在排名欺诈行为。
 \end{Def}
 
 \begin{equation}
@@ -304,7 +305,7 @@ Jaccard(set_i, set_j) = \frac{|set_i \cap set_j|}{|set_i \cup set_j|}
 \subsection{人工复核}
 
 最后，本研究对\emph{com.arsenal.FunWeather}、\emph{com.jhwl.fjxa}和\emph{com.sscwap}的评论了进行人工复核。
-为了方便复核，作者对每个应用的评论都按内容进行了排序。
+为了方便复核，笔者对每个应用的评论都按内容进行了排序。
 
 \begin{figure}[htbp]
 	\centering
@@ -321,7 +322,7 @@ Jaccard(set_i, set_j) = \frac{|set_i \cap set_j|}{|set_i \cup set_j|}
 可以明显看出，\emph{com.jhwl.fjxa}和\emph{com.arsenal.FunWeather}两款App都有明显的评论重复现象。
 而图中对\emph{com.sscwap}的评论虽然看上去也比较近似，但这其实是由于本文按照评论内容对这些评论进行了一次排序。
 如果结合日期数据观察，就能发现这些数据是由用户在比较分散的时间发出的。
-所以说这些看上去稍微类似的评论，并不一定存在关联关系，作者不倾向于认为这款App购买了排名欺诈服务。
+所以说这些看上去稍微类似的评论，并不一定存在关联关系，笔者不倾向于认为这款App购买了排名欺诈服务。
 反观\autoref{fig:cmt-sample-1}中的评论，有多条长评论高度相似、甚至一模一样，这在真实案例中是不太可能会存在的情况；而\autoref{fig:cmt-sample-2}中多条近似、相同的评论是在十分接近的时间里被发表的，进一步加深了他们之间存在关联的可能性，所以本文十分有理由相信这两款应用的确存在排名欺诈的行为。
 
 本研究还随机抽取了一些发布相同好评的不同用户进行追查，结果发现部分用户在研究收集到的数据集中的评论数只有一到两条，这很有可能是提供排名欺诈服务的商家规避检测的一种策略。
