--- a/edwin_2019/main.tex
+++ b/edwin_2019/main.tex
@@ -327,8 +327,8 @@
 \input{chapter-background}
 \clearPaperPage
 
-\input{chapter-dataCollection}
-\clearPaperPage
+% \input{chapter-dataCollection}
+% \clearPaperPage
 
 \input{chapter-fakerevealer}
 \clearPaperPage
