--- a/edwin_2019/bib/REFERENCE.bib
+++ b/edwin_2019/bib/REFERENCE.bib
@@ -25,6 +25,14 @@
   organization={ACM}
 }
 
+@inproceedings{xie2015appwatcher,
+  title={AppWatcher: Unveiling the underground market of trading mobile app reviews},
+  author={Xie, Zhen and Zhu, Sencun},
+  booktitle={Proceedings of the 8th ACM Conference on Security \& Privacy in Wireless and Mobile Networks},
+  pages={1--11},
+  year={2015}
+}
+
 @inproceedings{chen2017toward,
   title={Toward detecting collusive ranking manipulation attackers in mobile app markets},
   author={Chen, Hao and He, Daojing and Zhu, Sencun and Yang, Jingshun},
