--- a/edwin_2019/chapter-feedback.tex
+++ b/edwin_2019/chapter-feedback.tex
@@ -1,15 +1,17 @@
-\chapter{仿冒应用的评论分析}
+\chapter{面向仿冒应用的排名欺诈验证创新}
 \label{chp:feedback}
 
-应用市场中的用户反馈区是Android应用生态的重要部分，也是移动黑灰产从业者的深耕之地。
-热心用户会在评论区提出反馈，黑灰产从业者则会利用排名欺诈的手段牟取利益。
-为了进一步对仿冒应用的生态有所了解，笔者有必要搜集和分析仿冒应用的评论。
-对于与仿冒应用相关的评论，有以下待解答的问题：
-有多少用户会对这些应用进行评论？
-用户对这些应用的使用感受如何？
-仿冒应用是否会跟排名欺诈有所联系？
+\section{研究概况}
+应用市场中的用户反馈区是Android应用生态的重要部分，热心用户会在评论区提出反馈，黑灰产从业者则会利用排名欺诈的手段牟取利益。
+为了进一步了解仿冒应用的生态，本章针对仿冒应用与排名欺诈是否存在关联进行了研究。
+现有的排名欺诈检测技术各有其限制。
+AppWatcher~\cite{xie2015appwatcher}提出的迭代算法需要采用已知存在排名欺诈行为的应用作为迭代起点，但真实数据的获取是本领域的公认难题；
+另一研究~\cite{zhu2014discovery}则需要持续收集应用在商店中的排名数据以进行异常检测，对收集的数据内容有一定要求。
 
-为了回答这些问题，笔者从\texttt{360手机助手}应用商店中爬取了部分应用和它们的所有历史评论，然后对这些评论进行了处理和分析。
+针对上述研究存在的问题，本章研究创新性地从社交媒体研究中引进了用户行为相似度的概念，在不需先验知识和特殊数据的前提下，从用户可信度角度挖掘可能存在的排名欺诈用户群体。
+之后，针对评论数据量大带来的大运算量问题，本章研究又进一步采用了基于NLP的方法，从评论内容重复程度挖掘可能利用了排名欺诈手段的应用，实现对排名欺诈的快速排查。
+最后，本章对评论数据进行人工复核，证明两种方法的有效性，也确认了仿冒应用与排名欺诈相关的事实。
+
 
 \section{仿冒评论数据收集}
 由于Janus平台上并不提供评论数据，\mytool 的爬虫模块也只支持应用爬取，所以笔者另外在应用市场上重新收集了评论数据。
@@ -123,14 +125,13 @@
 再回望\texttt{淘宝}、\texttt{微信}等应用的评分，两者之间似乎有了矛盾。
 一款应用的用户越多，真实的评论数目越大，该款应用的评分就会趋向客观，直到收敛到一个可以反映应用质量的真实水平。
 \emph{com.jhwl.fjxa}、\emph{com.arsenal.FunWeather}、\emph{com.sscwap}三款应用的用户量固然不能和\texttt{微信}、\texttt{淘宝}相比，但成百上千的评论数也暗示着一个不小的用户群体。
-在用户群体有一定规模的情况下，还能保持名列前茅的平均评价，究竟是这三款仿冒应用的确受到了用户的热捧，还是另有原因？
+在用户群体有一定规模的情况下，还能保持高水平的平均评价并不容易，因此需要验证上述应用是否利用了排名欺诈将评分拉高。
 
 \section{仿冒应用与排名欺诈关联验证}
 
 \subsection{排名欺诈检测初探}
 
-带着上述的疑问，笔者决定用自动化的方法试图寻找这几款应用是否有排名欺诈的可能。
-
+由于前文提及的两项排名欺诈检测研究分别需要先验知识与特殊数据，而现有数据中并不具备这些条件，所以本研究选择了另一前人研究的方法进行探索。
 \texttt{FRAUDAR}~\cite{hooi2016fraudar}是Bryan Hooi在2016年推出的一个算法，可以使用二分图挖掘的方法找出可能的虚假好评，并输出最可能涉及排名欺诈的应用和用户。
 算法基于的假设是，普通用户的行为（在本文中即为对App评论的行为）是大致随机的，而用于进行排名欺诈的用户群的行为却会有比较明显的指向性（即针对购买了排名欺诈服务的App发送好评），而且为了将平均评分拉高，就意味着需要发送大量好评。
 如果将用户和App分别看做两种不同节点，每条好评看作是两种节点之间的边，那么在这张用户-评论-应用图中，排名欺诈用户和对应的App之间就会有特别紧密的联系。
@@ -140,13 +141,18 @@
 因此，本研究从所有评论中筛选出了满分好评，其总数为381,507条，由229,100名用户给出，分布于848个应用中，占评论总数的87.15\%。
 笔者将\texttt{FRAUDAR}应用在了本研究的好评数据集上，找到了115名可疑用户和13个可疑应用。
 经过比对后，笔者发现，13个可疑应用并不包含仿冒样本，而仿冒应用的所有评论条目中也没有源于那115名可疑用户的评论。
-但\emph{com.jhwl.fjxa}的评价表现依然令人生疑，因此，笔者决定使用其他办法检测这几款仿冒应用的评论中是否存在排名欺诈的可能性。
-基于本工作中现有的数据项，进行检测的角度可以分为两个，一个是评论用户可信度，另一个则是评论内容相似度。
+% 但\emph{com.jhwl.fjxa}的评价表现依然令人生疑，因此，笔者决定使用其他办法检测这几款仿冒应用的评论中是否存在排名欺诈的可能性。
+% 基于本工作中现有的数据项，进行检测的角度可以分为两个，一个是评论用户可信度，另一个则是评论内容相似度。
+\texttt{FRAUDAR}的工作原理是在二分图中不断删边，从而获得一个紧密子图，这意味着可能潜在的大量假阴性结果（False Positive）。
+为确认\texttt{FRAUDAR}的有效性，本研究提出了另一种排查方法。
 
 \subsection{基于评论用户可信度的排名欺诈排查}
 
-Mohammad-Ali~\cite{abbasi2013measuring}在2013年提出了一个个体行为相似度的计算方法。
-在该算法中，用户行为相似度由\autoref{equ:usr_cre1}计算，如果相似度超过了某个阈值$T_1$，就可以将两名用户聚入同一类。
+Mohammad-Ali~\cite{abbasi2013measuring}在2013年提出了一个计算社交媒体中用户行为相似度的计算方法。
+评论区虽然不同于社交媒体，但两者之间有一些共同之处，可以尝试将该算法迁移至排名欺诈检测中。
+在该算法的基础上，本研究创新性地加入用户可信度权重的概念，基于用户行为相似度对用户进行聚类，最终找出可疑用户群体，从而避免\texttt{FRAUDAR}的高假阴性结果。
+
+该算法以\autoref{equ:usr_cre1}计算用户行为相似度，如果相似度超过了某个阈值$T_1$，就可以将两名用户聚入同一类。
 \autoref{equ:usr_cre1}中的$B(u_i, t)$指用户$u_i$在时间节点$t$的行为（在此处可以理解为对某一个应用给好评），而$\sigma(B(u_i, t), B(u_j, t))$则是一个用来计算用户$u_i$和$u_j$在时间为$t$时行为相似度的方程，Mohammad在文中选用的是\autoref{equ:usr_cre2}所示的Jaccard相似系数，所以本文在这里也选用了同样的Jaccard系数计算。
 
 \begin{equation}
@@ -159,10 +165,11 @@ Jaccard(set_i, set_j) = \frac{|set_i \cap set_j|}{|set_i \cup set_j|}
 \end{equation}
 \vspace{0.5mm}
 
-在这种计算方式下，那些仅给过一次好评的用户将会很容易成为噪声数据，对研究的结果产生影响，所以笔者先剔除掉了这部分数据。
+在这种计算方式下，那些仅给过一次好评的用户将会很容易成为噪声数据，对研究的结果产生影响，所以本研究剔除掉了这部分数据。
 仅给过一次好评的用户共186,775人，占所有给出好评用户的81.53\%。
 
-在将行为相似的用户聚类之后，可以通过计算某一应用评论中疑似排名欺诈评论的占比、或是评论该App的可疑用户占所有可疑用户的占比来排查可能购买了排名欺诈服务的App。
+在将行为相似的用户聚类之后，本研究引入用户可信度权重。
+可以通过计算某一应用评论中疑似排名欺诈评论的占比、或是评论该App的可疑用户占所有可疑用户的占比来排查可能购买了排名欺诈服务的App。
 
 \begin{Def}
 	应用的用户可信度权重
@@ -232,21 +239,22 @@ Jaccard(set_i, set_j) = \frac{|set_i \cap set_j|}{|set_i \cup set_j|}
 	\label{table:usr-cred-res-2}
 \end{table}
 
-表中结果显示，无论是用哪种权重对应用可疑度进行排名，\emph{com.arsenal.FunWeather}和\emph{com.jhwl.fjxa}在总计的848个应用中都排在相当靠前的位置，所以这两个应用都相当可疑，十分可能具有排名欺诈行为。
+结果显示，无论是用哪种权重对应用可疑度进行排名，\emph{com.arsenal.FunWeather}和\emph{com.jhwl.fjxa}在总计的848个应用中都排在相当靠前的位置，所以这两个应用都相当可疑，十分可能具有排名欺诈行为。
 另一方面，\emph{com.sscwap}的排名相对靠后，具有排名欺诈行为的可能性较小。
 
 本组实验使用了服务器承担运算任务，实验服务器搭载了两颗Intel的至强E5-2367 V4版8核CPU，内存为252GB。
-在$T_1$分别设置为0.4/0.6/0.8时，三组基于用户可信度实验用的python代码分别需要运行7,086/6,935/6,801分钟才得出结果。
+在$T_1$分别设置为0.4/0.6/0.8时，三组基于用户可信度实验用的python代码分别需要运行7,086/6,935/6,801分钟得到出结果。
 
 \subsection{基于评论内容相似度的排名欺诈排查}
-与前面的用户可信度计算相比，利用评论内容相似度排查排名欺诈的方法要相对简单一些，计算量也明显较小。
+上节的方法带来了相对可信的结果，但同时也导致了庞大的运算任务。
+为了减小运算量，提高排查速度，本研究提出了利用评论内容相似度排查排名欺诈的方法。
 根据笔者的经验，在排名欺诈相关的评论通常具有很高的相似性，甚至一模一样，导致那些购买排名欺诈服务的应用中有很多相似甚至相同的评论。
 所以，可以通过计算应用内相似评论的比率以筛选可能购买了排名欺诈服务的应用。
 
 \begin{Def}
 	应用评论重合率
 
-	对于市场中的某一个评论列表为$CL_{app_k}$的应用$app_k$，假设其所有评论可以被分成$n$个组$CG_i (0 <i < n)$，则笔者定义该应用的评论重合率$RD_{app_k}$如下。重合率越高，应用越有可能存在排名欺诈行为。
+	对于市场中的某一个评论列表为$CL_{app_k}$的应用$app_k$，假设其所有评论可以被分成$n$个组$CG_i (0 <i < n)$，则定义该应用的评论重合率$RD_{app_k}$如下。重合率越高，应用越有可能存在排名欺诈行为。
 \end{Def}
 
 \begin{equation}
@@ -298,13 +306,14 @@ Jaccard(set_i, set_j) = \frac{|set_i \cap set_j|}{|set_i \cup set_j|}
 
 \autoref{table:cmt-simi-res}提供了三款仿冒应用的评论重合率和在两组数据中的排名情况。
 在``50''数据组的511个应用中，\emph{com.arsenal.FunWeather}和\emph{com.jhwl.fjxa}分别排名58和66（前11\%和前13\%），而在``100''数据组的455个应用中，\emph{com.arsenal.FunWeather}和\emph{com.jhwl.fjxa}的排名是57和65（前13\%和前14\%），都算是比较靠前的位置。
-而且，只看评论重合率，两款应用的数值都超过了44\%，相当于差不多每五条评论中就有两条十分类似的评论，这表明上述两款应用很有可能使用了排名欺诈。
-至于\emph{com.sscwap}的排名则比较偏后，较低的重合率说明其好评比较多元化，使用排名欺诈服务的可能性比较低。
-本研究会在后面一节对这些结果进行验证。
+而且，只看评论重合率，两款应用的数值都超过了44\%，相当于约每五条评论中就有两条十分类似的评论，这表明上述两款应用很有可能使用了排名欺诈。
+\emph{com.sscwap}相对靠后的排名和较低的重合率说明其好评比较多元化，使用排名欺诈服务的可能性比较低。
+上述结果与基于评论用户可信度的排名欺诈排查方法的结果相对一致，说明两种方法效果相当。
+由于本方法的运算只需用到单个应用的所有应用数据，所以在只有单个应用的评论数据可用时，也能使用本方法进行排查。
 
 \subsection{人工复核}
 
-最后，本研究对\emph{com.arsenal.FunWeather}、\emph{com.jhwl.fjxa}和\emph{com.sscwap}的评论了进行人工复核。
+最后，本研究对\emph{com.arsenal.FunWeather}、\emph{com.jhwl.fjxa}和\emph{com.sscwap}的评论了进行人工复核，验证上述三种方法得到的结果。
 为了方便复核，笔者对每个应用的评论都按内容进行了排序。
 
 \begin{figure}[htbp]
@@ -319,22 +328,21 @@ Jaccard(set_i, set_j) = \frac{|set_i \cap set_j|}{|set_i \cup set_j|}
 \end{figure}
 
 \autoref{fig:cmt-samples-1}展示了本文对三款应用好评取样的结果。
-可以明显看出，\emph{com.jhwl.fjxa}和\emph{com.arsenal.FunWeather}两款App都有明显的评论重复现象。
+可以看出，\emph{com.jhwl.fjxa}和\emph{com.arsenal.FunWeather}两款App都有明显的评论重复现象。
 而图中对\emph{com.sscwap}的评论虽然看上去也比较近似，但这其实是由于本文按照评论内容对这些评论进行了一次排序。
 如果结合日期数据观察，就能发现这些数据是由用户在比较分散的时间发出的。
 所以说这些看上去稍微类似的评论，并不一定存在关联关系，笔者不倾向于认为这款App购买了排名欺诈服务。
-反观\autoref{fig:cmt-sample-1}中的评论，有多条长评论高度相似、甚至一模一样，这在真实案例中是不太可能会存在的情况；而\autoref{fig:cmt-sample-2}中多条近似、相同的评论是在十分接近的时间里被发表的，进一步加深了他们之间存在关联的可能性，所以本文十分有理由相信这两款应用的确存在排名欺诈的行为。
+反观\autoref{fig:cmt-sample-1}中的评论，有多条长评论高度相似、甚至一模一样，这在真实案例中是不太可能会存在的情况；而\autoref{fig:cmt-sample-2}中多条近似、相同的评论是在十分接近的时间里被发表的，进一步加深了他们之间存在关联的可能性。
+
+综上，本研究有理由相信这两款仿冒应用的确存在排名欺诈的行为，从而推导仿冒应用与排名欺诈存在关联。
+上述结果也同时说明了本研究提出的两种方法都能有效鉴别出使用了排名欺诈的应用，效果优于现有的部分研究。
 
 本研究还随机抽取了一些发布相同好评的不同用户进行追查，结果发现部分用户在研究收集到的数据集中的评论数只有一到两条，这很有可能是提供排名欺诈服务的商家规避检测的一种策略。
 
 \section{本章小结}
-本章从仿冒应用在市场中收到的评论入手，首先分析了用户对于这类应用的反响。
-用户给出的反馈为一致好评，这十分出人意料。
-进一步地，为验证仿冒应用与排名欺诈是否有关联，本文选取了部分应用的评论数据进行分析，并借鉴了前人研究提出了研究手段进行筛查。
+本章从仿冒应用在市场中收到的评论入手，验证了仿冒应用与排名欺诈是否存在关联。
+为完成本研究，本文随机选取了部分应用的评论数据进行分析，借鉴了前人研究提出了研究手段进行筛查。
 
-一方面，从结果看，无论是基于评论内容相似度的排名欺诈排查方法还是基于用户可信度权重的排查方法，都证明了仿冒应用的确会利用排名欺诈服务提升自身的曝光率。
-另一方面，用两种方法进行筛查也顺便比较了他们的有效性。
-从性能层面看，两种方法有较大的区别。
-研究发现，部分可疑好评的用户仅仅评论过一到两次，如果大部分排名欺诈用户都采用这种只发布少量好评的策略，基于用户可信度权重的排查方法就很可能会因为可参考的数据量太小而失效；
-另外，基于用户可信度权重的排查方法会带来相当大的运算量，相比之下，基于评论内容相似度的代码只需几分钟就能运算完毕。
-综合上述因素，本研究认为基于评论内容相似度的排查方法是更为可行的排查方式。
+针对现有研究存在的不足之处，本研究尝试将其他领域的研究方法迁移应用于本次排查中，获得了良好的结果；
+为了进一步优化排查方法，减小运算量，本研究进一步提出了可用于单个应用的排名欺诈排查的方法。
+最后的人工复核证明，无论是基于评论内容相似度的排名欺诈排查方法还是基于用户可信度权重的排查方法，都具有有效性。
