--- a/edwin_2019/A2-COVER-E.tex
+++ b/edwin_2019/A2-COVER-E.tex
@@ -44,8 +44,7 @@
 \vskip 3cm
 
 \begin{center}
-\bfseries{\scshape{\huge \TheisNameEn
-}}\\
+\scshape{\huge \TheisNameEn}\\
 \end{center}
 
 \vskip 2cm {\large
