--- a/edwin_2019/B1-ABSTRACT.tex
+++ b/edwin_2019/B1-ABSTRACT.tex
@@ -1,4 +1,5 @@
-\addcontentsline{toc}{chapter}{摘要}
+% 前置\cleardoublepage\phantomsection 以确保目录超链接到正确页码
+\cleardoublepage\phantomsection\addcontentsline{toc}{chapter}{摘要}
 
 \chapter*{\zihao{2}\heiti{摘~~~~要}}
 \vspace{-5mm}
@@ -11,15 +12,15 @@
 在尚未有前人进行系统研究的情况下，对仿冒应用进行调研十分有必要。
 
 为了获得关于仿冒应用的第一手资料，本文直接从业界收集数据入手分析，完成本次大规模实证研究。
-首先，笔者设计实现了仿冒应用过滤框架\mytool ，进行了针对仿冒应用的大规模数据收集，将仿冒应用数据整理成集。
-其次，基于收集到的数据，本文分别从仿冒应用的基本特征、影响仿冒应用数量的因素以及仿冒应用的发展轨迹三个不同视角对仿冒应用的特征进行解读。
-本研究还深入分析了数据中的几个案例，提供了更多关于仿冒应用生态的细节。
-进一步地，为了了解仿冒应用在应用市场上获得的反馈，以及验证仿冒应用和移动黑灰产的另一个环节---排名欺诈---之间是否存在联系，本文针对仿冒应用在应用市场上的评级和评论等进行了一系列的分析。
+针对现有爬虫框架不能定向爬取的问题，笔者设计实现了仿冒应用收集框架\mytool ，进行了仿冒应用的大规模数据收集，将仿冒应用数据整理成集。
+其次，基于收集到的数据，本文分别从仿冒应用的基本特征、影响仿冒应用数量的因素以及仿冒应用的发展轨迹三个不同视角，结合实例分析，对仿冒应用的特征进行解读，完成了领域创新。
+进一步地，为验证仿冒应用和移动黑灰产的另一个环节---排名欺诈之间是否存在联系，本文收集了仿冒应用在应用市场上的评级和评论进行了排名欺诈排查。
+针对现有排名欺诈检测方法的不足，本文先后提出两种方法创新性地对所得数据进行检测。
 
-在数据收集方面，本文使用\mytool 共收集到了超过15万个数据条目，其中每个数据条目代表一个应用样本。
-利用这些样本对仿冒应用进行特征解读，本文得到了如仿冒应用的命名倾向和仿冒应用开发者对市场监管防御机制的规避策略等信息，之后的案例分析更暴露出了仿冒作者针对不同应用进行仿冒的形式和应用市场之间的监管缺陷。
+研究结果方面，在数据收集上，本文使用\mytool 共收集到了超过15万个数据条目，其中每个数据条目代表一个应用样本。
+利用这些样本对仿冒应用进行特征解读，本文得到了如仿冒应用的命名倾向和仿冒应用开发者对市场监管防御机制的规避策略等信息，相关的案例分析更暴露出了仿冒作者针对不同应用进行仿冒的形式和应用市场之间的监管缺陷。
 这些信息都有助于对仿冒应用进行理解。
-评论分析方面，结合两种排查方法和最后的人工复核，本文确认了仿冒应用中确实存在排名欺诈行为的事实。
+评论分析方面，结合人工复核，本文确认了两种检测方法都具有良好的效果，而仿冒应用中确实存在排名欺诈行为。
 
 综上，本文分别从仿冒应用特征解读和仿冒应用评论分析两个方面完成了具有创新性的研究。
 作者希望能借助本文提供的数据和分析结果，提供一个面向仿冒应用及其生态的清晰视角。
