--- a/edwin_2019/B2-ABSTRACT-E.tex
+++ b/edwin_2019/B2-ABSTRACT-E.tex
@@ -1,6 +1,6 @@
 \newpage
-
-\addcontentsline{toc}{chapter}{ABSTRACT}
+% 前置\cleardoublepage\phantomsection 以确保目录超链接到正确页码
+\cleardoublepage\phantomsection\addcontentsline{toc}{chapter}{ABSTRACT}
 
 \chapter*{\zihao{2}\heiti{ABSTRACT}}
 \vspace{-5mm}
